update new random

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 gradio==4.22.0
 xformers==0.0.20
-torch==2.0.1
-torchvision==0.15.2
-diffusers==0.25.0
+# torch==2.0.1
+# torchvision==0.15.2
+diffusers==0.27.0
 transformers==4.36.2
 huggingface-hub==0.20.2
 spaces==0.19.4
